# CuttingStockProblem

./: CMakeLists.txt  CppProperties.json
src/: CMakeLists.txt  column.c  cutting_stock.c
